# template_view

./: CMakeLists.txt  README.md  package.xml
include/: mainwindow.h  thread.h
src/: main.cpp  mainwindow.cpp  thread.cpp
ui/: mainwindow.ui
